samples/task/valid/R26.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><info><p>info</p></info><choicetable><chhead><choptionhd>Option</choptionhd><chdeschd>Description</chdeschd></chhead><chrow><choption>Opt1</choption><chdesc><p>Desc1</p></chdesc></chrow></choicetable></step></steps>
  </taskbody>
</task>