samples/task/invalid/R33.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><choicetable><chhead><choptionhd>H1</choptionhd><chdeschd>H2</chdeschd></chhead><chrow><choption>O1</choption><chdesc><p>D1</p></chdesc></chrow></choicetable><info><p>info</p></info></step></steps>
  </taskbody>
</task>